Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4248

Assertions triggered by metric type changes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.2.0
    • Metrics
    • None

    Description

      If we alter the data type of a metric, the records layer asserts because the data type of the previously restored metric is not the same. In this case, we should allow the registration and just update the metric.

      Attachments

        Activity

          People

            jamespeach James Peach
            jamespeach James Peach
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: